tests/ui/lifetimes/issue-64173-unused-lifetimes.stderr
error[E0658]: a non-static lifetime is not allowed in a `const`
  --> $DIR/issue-64173-unused-lifetimes.rs:16:23
   |
LL |     beta: [(); foo::<&'a ()>()],
   |                       ^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = help: add `#![feature(generic_const_exprs)]` to the crate attributes to enable

error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-64173-unused-lifetimes.rs:4:28
   |
LL |     array: [(); size_of::<&Self>()],
   |                            ^^^^

error[E0392]: parameter `'s` is never used
  --> $DIR/issue-64173-unused-lifetimes.rs:3:12
   |
LL | struct Foo<'s> {
   |            ^^ unused parameter
   |
   = help: consider removing `'s`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: parameter `'a` is never used
  --> $DIR/issue-64173-unused-lifetimes.rs:15:12
   |
LL | struct Bar<'a> {
   |            ^^ unused parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0392, E0658.
For more information about an error, try `rustc --explain E0392`.
